<resources>
    <string name="app_name">"Datos de Cliente"</string>

    <!-- Strings related to login -->

    <string name="title_activity_frm_informacion"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_ingresar">Ingresar</string>
    <string name="title_activity_frm_lista_informacion">FrmListaInformacion</string>
    <string name="title_activity_frm_configuracion">FrmConfiguracion</string>
    <string name="text_configuracion">Configuración del Equipo</string>
    <string name="text_listado">Encuestas Recientes</string>
    <string name="title_activity_frm_lista_fotos">FrmListaFotos</string>
    <string name="text_lista_fotos">Listado de Fotos</string>

    <string name="no_camara_sistema">No se encontró el dispositivo cámara en su equipo</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_frm_informacion_clientes">FrmInformacionClientes</string>
    <string name="text_nombre_cliente">Nombre del Cliente</string>
    <string name="text_direccion_cliente">Dirección del Cliente</string>
    <string name="text_nit_cliente">NIT del Cliente</string>
    <string name="text_telefono_cliente">Teléfono del Cliente</string>
    <string name="text_correo_cliente">Correo del Cliente</string>
    <string name="text_nombre_contacto">Nombre del Contacto</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_frm_imagen_completa">FrmImagenCompleta</string>
    <string name="hint_idequipo">Identificador del Equipo</string>
    <string name="hint_webservice">Web Service</string>
</resources>
